Name: bson
Version: 0.0.1
Synopsis: BSON documents are JSON-like objects with a standard binary encoding
Description: This implements version 1.0 of BSON defined at bsonspec.org
Category: Data
Author: Tony Hannan
Maintainer: Tony Hannan <tony@10gen.com>
License: OtherLicense
License-file: LICENSE
Build-Depends: base < 5, time, bytestring, unix, network, nano-md5, binary, data-binary-ieee754, compact-string-fix, mtl
Build-Type: Simple
Exposed-modules: Data.UString, Data.Bson, Data.Bson.Binary
